--- a/client/src/app/home/home/home.component.scss
+++ b/client/src/app/home/home/home.component.scss
@@ -42,3 +42,51 @@ header {
     color: white;
     text-transform: uppercase;
   }
+
+  
+a  {
+  text-decoration: none;
+}
+.btn{
+  width: 30%;
+  height: 40px;
+}
+
+.image :hover {
+  opacity: 1;
+  & button {
+      transform: none;
+      opacity: 1;
+  }
+}
+
+.hover-overlay{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(255,255,255,0.5);
+  opacity: 0;
+  transition: all 0.5s;
+
+  & button {
+      z-index: 1000;
+      transition: all 0.5s;
+  }
+
+  & button:first-of-type{
+      transform: translateX(-20px);
+  }
+
+  & button:last-of-type{
+      transform: translateX(20px);
+  }
+}
+
+.see-btn{
+  width: 150px;
+  border-radius: 100px;
+  margin-right: 15px;
+  
+}
