--- a/client/src/assets/css/organik.css
+++ b/client/src/assets/css/organik.css
@@ -4692,9 +4692,9 @@ h6 {
   padding-bottom: 80px;
 }
 
-@media (min-width: 1200px) {
+@media (max-width: 700px) {
   .feature-box {
-    padding-top: 0;
+    padding-top: 30px;
     padding-bottom: 100px;
   }
 }
