--- a/client/src/app/home/home/home.component.html
+++ b/client/src/app/home/home/home.component.html
@@ -75,8 +75,8 @@
                         <div class="feature-box__single">
                             <i class="organik-icon-global-shipping feature-box__icon"></i>
                             <div class="feature-box__content">
-                                <h3>Return Policy</h3>
-                                <p>Money back guarantee</p>
+                                <h3>Politique de retour</h3>
+                                <p>Garantie de remboursement</p>
                             </div><!-- /.feature-box__content -->
                         </div><!-- /.feature-box__single -->
                     </div>
@@ -84,8 +84,8 @@
                         <div class="feature-box__single">
                             <i class="organik-icon-delivery-truck feature-box__icon"></i>
                             <div class="feature-box__content">
-                                <h3>Free Shipping</h3>
-                                <p>On all orders over $25.00</p>
+                                <h3>Livraison gratuite</h3>
+                                <p>Sur toutes les commandes de plus de 50,00 TND</p>
                             </div><!-- /.feature-box__content -->
                         </div><!-- /.feature-box__single -->
                     </div>
