--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -22,7 +22,7 @@
     </div>
 </div> -->
 
-<div class="product-card">
+<div class="product-card  shadow-sm">
     <div class="product-card__image">
         <img src="{{product.pictureUrl}}" alt="{{product.name}}">
         <div class="product-card__image-content">
