--- a/client/src/app/basket/basket.component.html
+++ b/client/src/app/basket/basket.component.html
@@ -26,7 +26,7 @@
                             [total]="(basketTotals$ | async).total"
                         ></app-order-totals>
                         <a routerLink="/checkout" class="btn btn-outline-primary py-2 btn-block">
-                            Proceed to checkout
+                            Passer à la caisse
                         </a>
                     </div>
                 </div>
