--- a/client/src/app/shared/components/order-totals/order-totals.component.html
+++ b/client/src/app/shared/components/order-totals/order-totals.component.html
@@ -2,19 +2,21 @@
     Order Summary
 </div>
 <div class="p-4">
-    <p class="font-italic mb-4">Shipping costs will be added depending on choices made during checkout</p>
+    <p class="font-italic mb-4">Frais de livraison seront ajoutés en fonction des choix effectués lors du paiement</p>
     <ul class="list-unstyled mb-4">
         <li class="d-flex justify-content-between py-3 border-bottom">
-            <strong class="text-muted">Order subtotal</strong>
-            <strong>{{subtotal | currency}}</strong>
+            <strong class="text-muted">Sous-total de la commandel</strong>
+            <strong>{{subtotal}} <span>,TND</span></strong>
         </li>
         <li class="d-flex justify-content-between py-3 border-bottom">
             <strong class="text-muted">Shipping and handling</strong>
-            <strong>{{shippingPrice | currency}}</strong>
+            <strong>{{shippingPrice}}<span>,TND</span></strong>
         </li>
         <li class="d-flex justify-content-between py-3 border-bottom">
             <strong class="text-muted">Total</strong>
-            <strong>{{total | currency}}</strong>
+            <strong>{{total}}<span>,TND</span></strong>
         </li>
     </ul>
 </div>
+
+ 
