--- a/client/src/app/core/section-footer/section-footer.component.html
+++ b/client/src/app/core/section-footer/section-footer.component.html
@@ -3,7 +3,8 @@
     <img src="assets/images/shapes/footer-bg-1-2.png" alt="" class="site-footer__shape-2">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+            
+            <div class="col-6 ">
                 <div class="footer-widget footer-widget__about-widget">
                     <a href="index.html" class="footer-widget__logo">
                         <img src="assets/images/logo-light.png" alt="" width="105" height="43">
@@ -14,7 +15,7 @@
                         sem neque.</p>
                 </div><!-- /.footer-widget -->
             </div><!-- /.col-sm-12 col-md-6 -->
-            <div class="col-sm-12 col-md-6 col-lg-6 col-xl-2">
+            <div class="col-6 ">
                 <div class="footer-widget footer-widget__contact-widget">
                     <h3 class="footer-widget__title">Contact</h3><!-- /.footer-widget__title -->
                     <ul class="list-unstyled footer-widget__contact">
@@ -34,57 +35,8 @@
                     </ul><!-- /.list-unstyled footer-widget__contact -->
                 </div><!-- /.footer-widget -->
             </div><!-- /.col-sm-12 col-md-6 col-lg-2 -->
-            <div class="col-sm-12 col-md-6 col-lg-6 col-xl-2">
-                <div class="footer-widget footer-widget__links-widget">
-                    <h3 class="footer-widget__title">Links</h3><!-- /.footer-widget__title -->
-                    <ul class="list-unstyled footer-widget__links">
-                        <li>
-                            <a href="index.html">Top Sellers</a>
-                        </li>
-                        <li>
-                            <a href="products.html">Shopping</a>
-                        </li>
-                        <li>
-                            <a href="about.html">About Store</a>
-                        </li>
-                        <li>
-                            <a href="contact.html">Contact</a>
-                        </li>
-                        <li>
-                            <a href="contact.html">Help</a>
-                        </li>
-                    </ul><!-- /.list-unstyled footer-widget__contact -->
-                </div><!-- /.footer-widget -->
-            </div><!-- /.col-sm-12 col-md-6 col-lg-2 -->
-            <div class="col-sm-12 col-md-6 col-lg-6 col-xl-2">
-                <div class="footer-widget">
-                    <h3 class="footer-widget__title">Explore</h3><!-- /.footer-widget__title -->
-                    <ul class="list-unstyled footer-widget__links">
-                        <li>
-                            <a href="products.html">New Products</a>
-                        </li>
-                        <li>
-                            <a href="checkout.html">My Account</a>
-                        </li>
-                        <li>
-                            <a href="contact.html">Support</a>
-                        </li>
-                        <li>
-                            <a href="contact.html">FAQs</a>
-                        </li>
-                    </ul><!-- /.list-unstyled footer-widget__contact -->
-                </div><!-- /.footer-widget -->
-            </div><!-- /.col-sm-12 col-md-6 col-lg-2 -->
-            <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                <div class="footer-widget">
-                    <h3 class="footer-widget__title">Newsletter</h3><!-- /.footer-widget__title -->
-                    <form action="#" data-url="YOUR_MAILCHIMP_URL" class="mc-form">
-                        <input type="email" name="EMAIL" id="mc-email" placeholder="Email Address">
-                        <button type="submit">Subscribe</button>
-                    </form>
-                    <div class="mc-form__response"></div><!-- /.mc-form__response -->
-                </div><!-- /.footer-widget -->
-            </div><!-- /.col-sm-12 col-md-6 col-lg-2 -->
+        
+       
         </div><!-- /.row -->
     </div><!-- /.container -->
     <div class="bottom-footer">
@@ -92,8 +44,8 @@
             <hr>
             <div class="inner-container text-center">
                 <div class="bottom-footer__social">
-                    <a href="#" class="fab fa-twitter"></a>
-                    <a href="#" class="fab fa-facebook-square"></a>
+                    
+                    <a href="https://www.facebook.com/pages/category/Product-Service/Ched-Darek-106668394307946/" class="fab fa-facebook-square"></a>
                     <a href="#" class="fab fa-instagram"></a>
                 </div><!-- /.bottom-footer__social -->
                 <p class="thm-text-dark">© Copyright <span class="dynamic-year"></span> by Company.com</p>
