--- a/client/src/app/home/home/home.component.html
+++ b/client/src/app/home/home/home.component.html
@@ -43,7 +43,7 @@
     </div>
     <!--/.Carousel Wrapper-->
 
-    <section class="feature-box">
+    <section class="feature-box" data-aos="zoom-in">
         <div class="container">
             <div class="inner-container wow fadeInUp" data-wow-duration="1500ms">
                 <div class="thm-tiny__slider" id="contact-infos-box" data-tiny-options='{
@@ -127,7 +127,7 @@
                     </li>
                 </ul>
             </div><!-- /.new-products__top -->
-            <div class="row  ">
+            <div class="row  " data-aos="zoom-out-up">
                 <div class="col-lg-4 col-md-6 filter-item dairy" *ngFor="let product of products">
                     <div class="product-card__two">
                         <div class="product-card__two-image">
@@ -164,17 +164,7 @@
 
 
 
-
-    <section class="col-9">
-        <div class="row">
-            <div class="col-4" *ngFor="let item of products">
-
-                <app-product-item [product]="item"></app-product-item>
-
-            </div>
-
-        </div>
-    </section>
+ 
 
 
     <section class="offer-banner">
@@ -206,87 +196,10 @@
         </div>
     </section>
 
-    <section class="funfact-one jarallax" data-jarallax data-speed="0.3" data-imgPosition="50% 50%">
-        <img src="assets/images/backgrounds/funfact-bg-1-1.jpg" class="jarallax-img" alt="">
-        <div class="container">
-            <div class="row no-gutters">
-                <div class="col-md-6 col-lg-4  wow fadeInLeft" data-wow-duration="1500ms" data-wow-delay="0ms">
-                    <div class="funfact-one__single">
-                        <h3 class="odometer" data-count="8080" data-aos="fade-down-right">80</h3>
-                        <p>Organic Products Available</p>
-                    </div><!-- /.funfact-one__single -->
-                </div><!-- /.col-md-6 col-lg-3 -->
+ 
 
-                <div class="col-md-6 col-lg-4  wow fadeInLeft" data-wow-duration="1500ms" data-wow-delay="200ms">
-                    <div class="funfact-one__single">
-                        <h3 class="odometer" data-count="440" data-aos="fade-down-left">04</h3>
-                        <p>Expert Team Mebers</p>
-                    </div><!-- /.funfact-one__single -->
-                </div><!-- /.col-md-6 col-lg-3 -->
-                <div class="col-md-6 col-lg-4  wow fadeInLeft" data-wow-duration="1500ms" data-wow-delay="300ms">
-                    <div class="funfact-one__single">
-                        <h3 class="odometer" data-count="2870" data-aos="fade-down-left">120</h3>
-                        <p>Satisfied Customers</p>
-                    </div><!-- /.funfact-one__single -->
-                </div><!-- /.col-md-6 col-lg-3 -->
-            </div><!-- /.row -->
-        </div><!-- /.container -->
-    </section><!-- /.funfact-one -->
-
-    <section class="call-to-action">
-        <img src="assets/images/shapes/call-shape-1.png" alt="" class="call-to-action__shape-1">
-        <img src="assets/images/shapes/call-shape-2.png" alt="" class="call-to-action__shape-2 wow fadeInLeft"
-            data-wow-duration="1500ms">
-        <h2 class="floated-text">Oragnic</h2><!-- /.floated-text -->
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-lg-12 col-xl-6 clearfix">
-                    <img src="assets/images/resources/call-1-1.jpg" class="call-to-action__image" alt="">
-                </div><!-- /.col-md-12 col-lg-12 col-xl-12 -->
-                <div class="col-md-12 col-lg-12 col-xl-6 clearfix">
-                    <div class="call-to-action__content">
-                        <div class="block-title text-left">
-                            <div class="block-title__decor"
-                                style="background-image: url(assets/images/shapes/leaf-2-1.png);"></div>
-                            <!-- /.block-title__decor -->
-                            <p data-aos="zoom-in">Shopping Store</p>
-                            <h3 data-aos="zoom-in">Organic Food Only</h3>
-                        </div><!-- /.block-title -->
-                        <p data-aos="zoom-in-left">There are many variations of passages of lorem ipsum available but
-                            the majority have suffered
-                            alteration in some form by injected humor or random word.</p>
-                        <div class="call-to-action__wrap">
-                            <div class="row no-gutters">
-                                <div class="col-md-6">
-                                    <div class="call-to-action__box">
-                                        <i class="organik-icon-farmer"></i>
-                                        <h3 data-aos="zoom-in-right">Professional
-                                            Farmers</h3>
-                                    </div><!-- /.call-to-action__box -->
-                                </div><!-- /.col-md-6 -->
-                                <div class="col-md-6">
-                                    <div class="call-to-action__box">
-                                        <i class="organik-icon-farm"></i>
-                                        <h3 data-aos="zoom-in-right">Solution
-                                            for Farming</h3>
-                                    </div><!-- /.call-to-action__box -->
-                                </div><!-- /.col-md-6 -->
-                            </div><!-- /.row -->
-                        </div><!-- /.call-to-action__wrap -->
-                        <a href="shop" class="thm-btn" data-aos="zoom-out-up" style="cursor: pointer;">Order Now</a>
-                        <!-- /.thm-btn -->
-                    </div><!-- /.call-to-action__content -->
-                </div><!-- /.col-md-12 col-lg-12 col-xl-12 -->
-            </div><!-- /.row -->
-        </div><!-- /.container -->
-    </section><!-- /.call-to-action -->
-
-    <div class="client-carousel ">
-        <div class="container">
-
-        </div><!-- /.container -->
-    </div><!-- /.client-carousel -->
-
+ 
+   
     <section class="call-to-action-two">
         <img src="assets/images/shapes/call-shape-2-1.png" alt="" class="call-to-action-two__shape-1">
         <img src="assets/images/shapes/call-shape-2-2.png" alt="" class="call-to-action-two__shape-2">
@@ -349,89 +262,65 @@
         </div><!-- /.container -->
     </section><!-- /.call-to-action-two -->
 
-    <section class="testimonials-one">
-        <div class="testimonials-one__head">
+
+    <section class="about-us">
+        <div class="section intro">
             <div class="container">
-                <div class="block-title text-center">
-                    <div class="block-title__decor"></div><!-- /.block-title__decor -->
-                    <p>Our Testimonials</p>
-                    <h3 data-aos="zoom-out-up">What People Say?</h3>
-                </div><!-- /.block-title -->
-            </div><!-- /.container -->
-        </div><!-- /.testimonials-one__head -->
-        <div class="container">
-            <div class="thm-tiny__slider" id="testimonials-one-box" data-tiny-options='{
-      "container": "#testimonials-one-box",
-      "items": 1,
-      "slideBy": "page",
-      "gutter": 0,
-      "mouseDrag": true,
-      "autoplay": true,
-      "nav": false,
-      "controlsPosition": "bottom",
-      "controlsText": ["<i class=\"fa fa-angle-left\"></i>", "<i class=\"fa fa-angle-right\"></i>"],
-      "autoplayButtonOutput": false,
-      "responsive": {
-          "640": {
-            "items": 2,
-            "gutter": 30
-          },
-          "992": {
-            "gutter": 30,
-            "items": 3
-          },
-          "1200": {
-            "disable": true
-          }
-        }
-  }'>
-                <div>
-                    <div class="testimonials-one__single" data-aos="zoom-out-right">
-                        <div class="testimonials-one__image">
-                            <img src="assets/images/resources/testi-1-1.png" alt="">
-                        </div><!-- /.testimonials-one__image -->
-                        <div class="testimonials-one__content">
-                            <p>I was very impresed by the osfins service lorem ipsum is simply free text used by copy
-                                typing
-                                refreshing. Neque porro est qui dolorem ipsum.</p>
-                            <h3>Winnie Collier</h3>
-                            <span>Customer</span>
-                        </div><!-- /.testimonials-one__content -->
-                    </div><!-- /.testimonials-one__single -->
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <div class="intro-header" data-aos="flip-up">
+                            <img src="assets/images/leaf.png" alt="Partner 1">
+                            <h3 >Pourquoi nous choisir</h3>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <div class="testimonials-one__single" data-aos="zoom-out-left">
-                        <div class="testimonials-one__image">
-                            <img src="assets/images/resources/testi-1-2.png" alt="">
-                        </div><!-- /.testimonials-one__image -->
-                        <div class="testimonials-one__content">
-                            <p>I was very impresed by the osfins service lorem ipsum is simply free text used by copy
-                                typing
-                                refreshing. Neque porro est qui dolorem ipsum.</p>
-                            <h3>Helen Woods</h3>
-                            <span>Customer</span>
-                        </div><!-- /.testimonials-one__content -->
-                    </div><!-- /.testimonials-one__single -->
-                </div>
-                <div>
-                    <div class="testimonials-one__single" data-aos="zoom-out-up">
-                        <div class="testimonials-one__image">
-                            <img src="assets/images/resources/testi-1-3.png" alt="">
-                        </div><!-- /.testimonials-one__image -->
-                        <div class="testimonials-one__content">
-                            <p>I was very impresed by the osfins service lorem ipsum is simply free text used by copy
-                                typing
-                                refreshing. Neque porro est qui dolorem ipsum.</p>
-                            <h3>Ethan Thomas</h3>
-                            <span>Customer</span>
-                        </div><!-- /.testimonials-one__content -->
-                    </div><!-- /.testimonials-one__single -->
+                
+                <div class="row">
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                        <div class="intro-left">
+                            <div class="intro-item" data-aos="zoom-in">
+                                <p><img src="assets/images/intro-icon-1.png" alt="Intro Image"></p>
+                                <h4>Toujours frais</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                            
+                            <div class="intro-item" data-aos="zoom-in-up">
+                                <p><img src="assets/images/intro-icon-2.png" alt="Intro Image"></p>
+                                <h4>Super Healthy</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" data-aos="zoom-in-down">
+                        <div class="effect">
+                            <a href="#">
+                                <img class="intro-image img-responsive" src="assets/images/intro-2.png" alt="Intro Image">
+                            </a>
+                        </div>
+                    </div>
+                    
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                        <div class="intro-right" data-aos="zoom-in-left">
+                            <div class="intro-item">
+                                <p><img src="assets/images/intro-icon-3.png" alt="Intro Image"></p>
+                                <h4>100% Natural</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                            
+                            <div class="intro-item" data-aos="zoom-in-right">
+                                <p><img src="assets/images/intro-icon-4.png" alt="Intro Image"></p>
+                                <h4>Qualité premium  </h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div><!-- /.container -->
-    </section><!-- /.testimonials-one -->
-
-
+        </div>
+    
+    </section>
+   
 
 
 
