--- a/client/src/app/home/home/home.component.scss
+++ b/client/src/app/home/home/home.component.scss
@@ -1,92 +1,32 @@
-header {
-    position: relative;
-    background-color: black;
-    height: 75vh;
-    min-height: 25rem;
-    width: 100%;
-    overflow: hidden;
-  }
-  
-  header video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: 0;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-  }
-  
-  header .container {
-    position: relative;
-    z-index: 2;
-  }
-  
-  header .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: black;
-    opacity: 0.5;
-    z-index: 1;
-  }
+ .see-btn{
+     height: 40px;
+     width: 130px;
+     border-radius: 150px;
+      
+ }
 
-  .display-3{
-    color: white;
-    text-transform: uppercase;
-  }
 
-  
-a  {
-  text-decoration: none;
-}
-.btn{
-  width: 30%;
-  height: 40px;
+ .about-us{
+     background-color: #f7f6f2;
+    margin-top: 3rem;
+    padding-bottom: 3rem;
+ }
+
+ .intro-header{
+     text-align: center;
+     padding: 2rem;
+     margin-right: 3em;
+    
+ }
+
+ .intro-header h3{
+   color: #78b144;
+   font-size: 44px;
+   font-family: Georgia, 'Times New Roman', Times, serif
+   
 }
 
-.image :hover {
-  opacity: 1;
-  & button {
-      transform: none;
-      opacity: 1;
-  }
-}
-
-.hover-overlay{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: rgba(255,255,255,0.5);
-  opacity: 0;
-  transition: all 0.5s;
-
-  & button {
-      z-index: 1000;
-      transition: all 0.5s;
-  }
-
-  & button:first-of-type{
-      transform: translateX(-20px);
-  }
-
-  & button:last-of-type{
-      transform: translateX(20px);
-  }
-}
-
-.see-btn{
-  width: 150px;
-  border-radius: 100px;
-  margin-right: 15px;
-  
+.intro-item p{
+    font-size: 14px;
+    line-height: 20px;
 }
