--- a/client/src/app/shared/components/order-totals/order-totals.component.html
+++ b/client/src/app/shared/components/order-totals/order-totals.component.html
@@ -5,7 +5,7 @@
     <p class="font-italic mb-4">Frais de livraison seront ajoutés en fonction des choix effectués lors du paiement</p>
     <ul class="list-unstyled mb-4">
         <li class="d-flex justify-content-between py-3 border-bottom">
-            <strong class="text-muted">Sous-total de la commandel</strong>
+            <strong class="text-muted">Sous-total de la commande</strong>
             <strong>{{subtotal}} <span>,TND</span></strong>
         </li>
         <li class="d-flex justify-content-between py-3 border-bottom">
