--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
     <div class="row">
-        <div class="col-8">
+        <div class="col-md-8 col-sm-12">
             <app-stepper [linearModeSelected]="false" #appStepper>
                 <cdk-step [label]="'Address'" [completed]="(checkoutForm.get('addressForm')).valid">
                    <app-checkout-address [checkoutForm]="checkoutForm"></app-checkout-address>
@@ -21,7 +21,7 @@
             </app-stepper>
         </div>
 
-        <div class="col-4">
+        <div class="col-md-4 col-sm-12">
             <app-order-totals
                 *ngIf="(basketTotals$ | async)"
                 [shippingPrice]="(basketTotals$ | async).shipping"
