--- a/client/src/app/shared/components/stepper/stepper.component.scss
+++ b/client/src/app/shared/components/stepper/stepper.component.scss
@@ -13,9 +13,31 @@
 
     &:active{
         outline: none;
+       
     }
 
     &:active:focus{
         outline: none;
+         
     }
 }
+
+.nav-link{
+    border-radius: 0px;
+    color:#60be74;
+
+    &.active{
+        background-color: #60be74;
+    }
+   
+}
+
+
+@media (max-width: 500px) {
+    
+    .nav-link{
+        font-size: 11px;
+        font-weight: bold;
+    }
+}
+
